--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.5",
     "sass": "^1.77.8"
+  },
+  "devDependencies": {
+    "esbuild": "0.23.1"
   }
 }
